# pydantic_module

./: README.md  main.py  pyproject.toml
